package com.example.popitka;

public class People {

    public String spisok;
    public People (){
        this.spisok= spisok ;
    }
    public String getSpisok() {
        return spisok;
    }

    @Override
    public String toString() {
        return spisok ;
    }

    public String setSpisok(String spisok) {
        this.spisok = spisok;
        return spisok;
    }
}
